--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </tbody>
       </table>
     </aside>
-    <img src="tabelee.PNG" alt="premierleague" width="450px" height="450px" />
+    <img src="tabelee.jpg" alt="tabelee" width="450px" height="450px" />
     <table class="league-table">
         <thead>
         <tr>
